--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
 body {
+	background-image: url(background.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-attachment: fixed;
+	background-size: cover;
+	backdrop-filter: blur(5px);
+
 	background-color: #666666;
 	color: white;
 	font-family: Arial, sans-serif;
@@ -10,14 +17,17 @@ body {
 	flex-direction: column;
 	justify-content: space-evenly;
 	align-items: center;
+	flex-wrap: wrap;
+	flex-grow: 1;
 }
 
 #img-main {
-	padding: 5%;
+	padding-top: 4%;
+	padding-bottom: 3%;
 }
 
 .button-join {
-	background-color: green;
+	background-color: #1b1d32;
 	font-size: 20px;
 	padding: 20px;
 	border: none;
@@ -31,7 +41,6 @@ body {
 }
 
 .div-button-join .button-join {
-	/* text-decoration: none; */
 	color: white;
 }
 
@@ -41,9 +50,13 @@ body {
 	justify-content: space-evenly;
 	align-items: center;
 	font-size: 24px;
-	margin: 20px;
+	/* margin: 2%; */
 }
 
 #description span {
 	padding: 10px;
+}
+
+#footer {
+	padding: 2%;
 }
