--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 body {
-	background-image: url(background.png);
+	/* background-image: url(background.png);
 	background-repeat: no-repeat;
 	background-position: center;
 	background-attachment: fixed;
 	background-size: cover;
-	backdrop-filter: blur(5px);
+	backdrop-filter: blur(5px); */
 
-	background-color: #666666;
-	color: white;
+	background-color: #ffdd58;
+	color: black;
 	font-family: Arial, sans-serif;
 	padding: 0;
 	margin: 0;
@@ -27,9 +27,11 @@ body {
 }
 
 .button-join {
-	background-color: #1b1d32;
+	/* background-color: #1b1d32; */
+	background-color: #5eac4a;
 	font-size: 20px;
 	padding: 20px;
+	/* border: 4px solid #289b47; */
 	border: none;
 	border-radius: 18px;
 }
@@ -41,7 +43,8 @@ body {
 }
 
 .div-button-join .button-join {
-	color: white;
+	color: black;
+	font-weight: bold;
 }
 
 #description {
